added CBF and jimplecomparision